fix again the contrast Oct 22 23_06

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -15,10 +15,10 @@ nav a:hover {
 
 .active {
 	color:rgba(252, 252, 252);
-	background-color: rgb(48, 114, 68);
+	background-color: rgb(79, 172, 86);
 }
 .banner{
-	background-color: rgb(62, 107, 92);
+	background-color: rgb(57, 191, 146);
     display:none;
 }
 .banner_content{
